--- a/.github/workflows/robot_tests.yml
+++ b/.github/workflows/robot_tests.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Robot Framework Tests
         run: |
-          robot -A robot.args  tests/
+          robot -A robot.args  test_juiceshop_ui/
 
       - name: Upload test results
         uses: actions/upload-artifact@v3
