--- a/.github/workflows/robot_tests.yml
+++ b/.github/workflows/robot_tests.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m Browser.entry init
           pip install --upgrade pip
           pip install -r requirements.txt
 
