--- a/.github/workflows/robot_tests.yml
+++ b/.github/workflows/robot_tests.yml
@@ -21,8 +21,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m Browser.entry init
           pip install --upgrade pip
+          pip install Browser
+          python -m Browser.entry init
           pip install -r requirements.txt
 
       - name: Run Robot Framework Tests
