Renuka | Added Browser Test using pw Browser library

--- a/.github/workflows/robot_tests.yml
+++ b/.github/workflows/robot_tests.yml
@@ -22,7 +22,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
+          pip install -U robotframework-browser
           python -m Browser.entry init
+          rfbrowser clean-node
+          rfbrowser init
           pip install -r requirements.txt
 
       - name: Run Robot Framework Tests
