--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,18 +12,18 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
-    pip install robotframework
+    pip install robotframework-junitxml
     pip install -r requirements.txt
   displayName: 'Install Robot Framework and Dependencies'
 
 - script: |
-    robot --outputdir output tests/notepad.robot
+    robot --outputdir output tests/notepad.robot --xunit output/junit-results.xml output/output.xml
   displayName: 'Run Robot Framework Tests'
 
 - task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'Robot'
-    testResultsFiles: 'output/output.xml'
+    testResultsFormat: 'JUnit'
+    testResultsFiles: 'output/junit-results.xml'
     failTaskOnFailedTests: true
   displayName: 'Publish Robot Framework Test Results'
 
