--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '3.x' # Ensure Python 3.x is installed
+    versionSpec: '3.13.1'
     addToPath: true
 
 - script: |
